# osdev

./: .clang-format  .gdbinit  .gitignore  .rustfmt.toml  CMakeLists.txt  Cargo.toml  Makefile  Makefile.src  README.md  bochs.conf  build.rs  busybox  busybox-minimal  configure  cross-compile.cmake  disk.img.xz  gdb-usage.txt  gen_img.sh  global_find.sh  init_script.sh  ldscript.ld  make_symbol_table.sh  pretty-print.py  rust-headers.hpp
.cargo/: config.toml
.github/workflows/: test-build.yaml
arch/: Cargo.toml
arch/arch_macros/: Cargo.toml
arch/arch_macros/src/: lib.rs
arch/arch_macros/src/riscv64/: percpu.rs
arch/arch_macros/src/x86_64/: mod.rs  percpu.rs
arch/percpu/: Cargo.toml
arch/percpu-macros/: Cargo.toml
arch/percpu-macros/src/: arch.rs  lib.rs
arch/percpu/macros/: Cargo.toml
arch/percpu/macros/src/: arch.rs  lib.rs
arch/percpu/src/: arch.rs  lib.rs
arch/src/: lib.rs
arch/src/riscv64/: config.rs  console.rs  context.rs  entry.S  entry.rs  fdt.rs  fence.rs  fpu.rs  init.rs  io.rs  kernel.ld  memory.txt  mm.rs  mod.rs  start.rs
arch/src/riscv64/entry/: mod.rs  page.rs
arch/src/riscv64/interrupt/: clint.rs  context.rs  mod.rs  trap.S  trap.rs
arch/src/x86_64/: bootstrap.rs  context.rs  fence.rs  fpu.rs  gdt.rs  init.rs  interrupt.rs  interrupt.s  kernel.ld  mm.rs  mod.rs  percpu.rs  trap.rs  user.rs
arch/x86_64/src/: gdt.rs  interrupt.rs  io.rs  lib.rs  task.rs
crates/arcref/: Cargo.toml
crates/atomic_unique_refcell/: Cargo.toml
crates/eonix_hal/: Cargo.toml  build.rs
crates/eonix_hal/eonix_hal_macros/: Cargo.toml
crates/eonix_hal/eonix_hal_macros/src/: lib.rs
crates/eonix_hal/eonix_hal_traits/: Cargo.toml
crates/eonix_hal/eonix_hal_traits/src/: context.rs  fault.rs  fpu.rs  lib.rs  mm.rs  processor.rs  trap.rs
crates/eonix_hal/src/: bootstrap.rs  context.rs  device.rs  lib.rs  link.x.in  mm.rs  processor.rs  trap.rs
crates/eonix_hal/src/arch/: mod.rs
crates/eonix_hal/src/arch/loongarch64/: bootstrap.rs  context.rs  cpu.rs  fdt.rs  fence.rs  fpu.rs  link.x  memory.x  mm.rs  mod.rs
crates/eonix_hal/src/arch/loongarch64/trap/: mod.rs  trap_context.rs
crates/eonix_hal/src/arch/riscv64/: bootstrap.rs  config.rs  console.rs  context.rs  cpu.rs  fdt.rs  fence.rs  fpu.rs  io.rs  link.x  memory.x  mm.rs  mod.rs  time.rs
crates/eonix_hal/src/arch/riscv64/interrupt/: mod.rs  plic.rs
crates/eonix_hal/src/arch/riscv64/trap/: captured.rs  default.rs  mod.rs  trap.S  trap_context.rs
crates/eonix_hal/src/arch/x86_64/: bootstrap.rs  context.rs  cpu.rs  fence.rs  gdt.rs  interrupt.rs  io.rs  link.x  memory.x  mm.rs  mod.rs  trap.rs
crates/eonix_hal/src/arch/x86_64/bootstrap/: init.rs
crates/eonix_hal/src/arch/x86_64/trap/: mod.rs  trap_context.rs
crates/eonix_hal/src/platform/: mod.rs  riscv64_qemu_virt.rs
crates/eonix_hal/src/trap/: trap_context.rs
crates/eonix_log/: Cargo.toml
crates/eonix_mm/: Cargo.toml
crates/eonix_percpu/: Cargo.toml
crates/eonix_preempt/: Cargo.toml
crates/eonix_runtime/: Cargo.toml
crates/eonix_runtime/src/: context.rs  executor.rs  lib.rs  ready_queue.rs  run.rs  scheduler.rs  task.rs
crates/eonix_runtime/src/executor/: builder.rs  execute_status.rs  output_handle.rs  stack.rs  stackful_executor.rs  stackless_executor.rs
crates/eonix_runtime/src/run/: future_run.rs
crates/eonix_runtime/src/task/: adapter.rs  task_state.rs  wait_list.rs
crates/eonix_spin_irq/: Cargo.toml
crates/eonix_sync/: Cargo.toml
crates/eonix_sync/eonix_sync_rt/: Cargo.toml
crates/eonix_sync/eonix_sync_rt/src/: lib.rs  rwlock.rs  spin_irq.rs  wait_list.rs
crates/eonix_sync/eonix_sync_rt/src/mutex/: guard.rs
crates/eonix_sync/eonix_sync_rt/src/rwlock/: guard.rs
crates/eonix_sync/eonix_sync_rt/src/wait_list/: wait_handle.rs  wait_object.rs
crates/intrusive_list/: Cargo.toml
crates/posix_types/: Cargo.toml
crates/slab_allocator/: Cargo.toml
doc/: assembly.md  bios_functions.md  boot.md  device_driver.md  filesystem.md  interrupt.md  malloc.md  mem_layout.txt  mem_layout_riscv64.txt  memory.md  multi_arch.md  net.md  task.md
doc/images/: mm.drawio
gblibc/: CMakeLists.txt
gblibc/include/: alloca.h  assert.h  ctype.h  dirent.h  errno.h  fcntl.h  poll.h  signal.h  stdarg.h  stdint.h  stdio.h  stdlib.h  string.h  termios.h  time.h  unistd.h
gblibc/include/bits/: alltypes.h  ioctl.h
gblibc/include/sys/: ioctl.h  mman.h  mount.h  prctl.h  stat.h  time.h  types.h  uio.h  utsname.h  wait.h
gblibc/private-include/: devutil.h  list.h  priv-vars.h  syscall.h
gblibc/src/: alloca.c  arithmetic.c  assert.c  crt0.s  ctype.c  dirent.c  errno.c  fcntl.c  init.c  internal.c  platform-independent.s  signal.c  stat.c  stdio.c  stdlib.c  string.c  time.c  unistd.c  wait.c
gblibstdc++/: CMakeLists.txt
gblibstdc++/include/: algorithm  bit  cstddef  functional  initializer_list  list  map  memory  new  queue  set  string  tuple  type_traits  utility  vector
gblibstdc++/include/bits/: alltypes.h  compressed_pair  forward  fwd_functional  iter_ops  rbtree  sequence  tuple_tools
gblibstdc++/include/bits/type_traits/: base  is_es  remove_add
include/: defs.hpp  kernel_main.h  kernel_main.hpp
include/asm/: boot.h  port_io.h  sys.h
include/driver/: e1000e.hpp
include/fs/: fat.hpp
macros/: Cargo.toml
script/: backtrace  build-img.sh  test.sh  translate-stacktrace.sh
src/: boot.s  driver.rs  elf.rs  hash.rs  intrusive_list.rs  io.rs  kernel.ld  kernel.rs  kernel_init.rs  kernel_main.c  kernel_main.cpp  kinit.cpp  lib.rs  mbr.S  mbr.ld  net.rs  panic.rs  path.rs  prelude.rs  rcu.rs  sync.rs
user-programs/: busybox.la64  busybox.static  dynamic_test  git_loongarch64.sh  init.out  init_script_comp.sh  init_script_loongarch64.sh  init_script_riscv64-virt.sh  init_script_riscv64.sh  init_script_x86_64.sh  int.out  libctest-dynamic.sh  libctest-static.sh  pthread_test
user-space-program/: .gitignore  CMakeLists.txt  Makefile.src  basic-lib.h  configure  hello-world.s  init.c  interrupt-test.s  lazybox.c  output_code.ld  output_symbols.ld  priv-test.c  script.ld  sh.c  stack-test.s
(+390 files in other folders)
