[package]
name = "eonix_kernel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["bin"]

[dependencies]
atomic_unique_refcell = { path = "./crates/atomic_unique_refcell", features = [
    "no_std",
] }
buddy_allocator = { path = "./crates/buddy_allocator" }
eonix_hal = { path = "./crates/eonix_hal" }
eonix_macros = { path = "./macros" }
eonix_mm = { path = "./crates/eonix_mm" }
eonix_percpu = { path = "./crates/eonix_percpu" }
eonix_preempt = { path = "./crates/eonix_preempt" }
eonix_runtime = { path = "./crates/eonix_runtime" }
eonix_sync = { path = "./crates/eonix_sync" }
eonix_log = { path = "./crates/eonix_log" }
intrusive_list = { path = "./crates/intrusive_list" }
pointers = { path = "./crates/pointers" }
posix_types = { path = "./crates/posix_types" }
slab_allocator = { path = "./crates/slab_allocator" }

bitflags = "2.6.0"
intrusive-collections = "0.9.7"
itertools = { version = "0.13.0", default-features = false }
acpi = "5.2.0"
align_ext = "0.1.0"
xmas-elf = "0.10.0"
ext4_rs = "1.3.2"

[target.'cfg(any(target_arch = "riscv64", target_arch = "loongarch64"))'.dependencies]
virtio-drivers = { version = "0.11.0" }

[features]
default = []
trace_pci = []
trace_syscall = []
trace_scheduler = []
log_trace = ["trace_pci", "trace_syscall", "trace_scheduler"]
log_debug = []
smp = []

[profile.release]
debug = true

[profile.dev]
panic = "abort"

[profile.dev.package.eonix_preempt]
opt-level = "s"

[profile.dev.package.eonix_runtime]
opt-level = "s"

[profile.dev.package.eonix_sync]
opt-level = "s"

[profile.dev.package.intrusive_list]
opt-level = "s"

[profile.dev.package.eonix_hal]
opt-level = "s"

[profile.dev.package."*"]
opt-level = "s"

[profile.dev.build-override]
opt-level = 0
codegen-units = 256
debug = false

[profile.release.build-override]
opt-level = 0
codegen-units = 256
debug = false
