[package]
name = "arch"
version = "0.1.0"
edition = "2021"

[dependencies]
eonix_hal_traits = { path = "../crates/eonix_hal/eonix_hal_traits" }
eonix_mm = { path = "../crates/eonix_mm" }
cfg-if = "1.0"

[target.'cfg(target_arch = "riscv64")'.dependencies]
sbi = "0.3.0"
riscv = { version = "0.13.0", features = ["s-mode"] }
spin = "0.10.0"
fdt = "0.1.5"
bitflags = "2.6.0"
