[package]
name = "eonix_runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
arch = { path = "../../arch" }
atomic_unique_refcell = { path = "../atomic_unique_refcell" }
eonix_log = { path = "../eonix_log" }
eonix_preempt = { path = "../eonix_preempt" }
eonix_spin_irq = { path = "../eonix_spin_irq" }
eonix_sync = { path = "../eonix_sync" }
pointers = { path = "../pointers" }

intrusive-collections = "0.9.7"

[features]
default = []
trace_scheduler = []
log_trace = ["trace_scheduler"]
