[package]
name = "eonix_sync_rt"
version = "0.1.0"
edition = "2024"

[dependencies]
arch = { path = "../../../arch" }
eonix_hal = { path = "../../eonix_hal" }
eonix_preempt = { path = "../../eonix_preempt" }
eonix_spin = { path = "../eonix_spin" }
eonix_sync_base = { path = "../eonix_sync_base" }

intrusive-collections = "0.9.7"
